1. siren 버튼 구현 누르면 켰다 껐다 가능 2. bluetooth 버튼 구현 블루투스 켰다 껐다 가능 3. flash 버튼 구현 플래시 켰다 껐다 가능 -> Permission 물음

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,10 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_toLeftOf="@id/bluetooth"
+        android:layout_toLeftOf="@id/bluetoothButton"
         android:layout_below="@id/title"
         android:text="플래시"
-        android:id="@+id/flash"
+        android:id="@+id/flashButton"
         />
 
     <Button
@@ -38,63 +38,63 @@
         android:layout_marginLeft="5dp"
         android:text="블루투스 켜기/끄기"
         android:textSize="10sp"
-        android:id="@+id/bluetooth"
+        android:id="@+id/bluetoothButton"
         />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_toRightOf="@id/bluetooth"
+        android:layout_toRightOf="@id/bluetoothButton"
         android:layout_marginLeft="5dp"
         android:layout_below="@id/title"
         android:text="사이렌"
-        android:id="@+id/siren"
+        android:id="@+id/sirenButton"
         />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/siren"
-        android:layout_alignLeft="@+id/flash"
-        android:layout_alignRight="@+id/siren"
-        android:layout_alignStart="@+id/flash"
-        android:layout_below="@id/bluetooth"
+        android:layout_alignEnd="@+id/sirenButton"
+        android:layout_alignLeft="@+id/flashButton"
+        android:layout_alignRight="@+id/sirenButton"
+        android:layout_alignStart="@+id/flashButton"
+        android:layout_below="@id/bluetoothButton"
         android:layout_marginTop="50dp"
         android:text = "안심귀가 서비스"
         android:textSize = "35sp"
-        android:id="@+id/safe_service"
+        android:id="@+id/safe_serviceButton"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/siren"
-        android:layout_alignLeft="@+id/flash"
-        android:layout_alignRight="@+id/siren"
-        android:layout_alignStart="@+id/flash"
-        android:layout_below="@id/safe_service"
+        android:layout_alignEnd="@+id/sirenButton"
+        android:layout_alignLeft="@+id/flashButton"
+        android:layout_alignRight="@+id/sirenButton"
+        android:layout_alignStart="@+id/flashButton"
+        android:layout_below="@id/safe_serviceButton"
         android:text="주위 편의 시설"
         android:textSize="35sp"
-        android:id="@+id/convenience"
+        android:id="@+id/convenienceButton"
         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/siren"
-        android:layout_alignLeft="@+id/flash"
-        android:layout_alignRight="@+id/siren"
-        android:layout_alignStart="@+id/flash"
-        android:layout_below="@id/convenience"
+        android:layout_alignEnd="@+id/sirenButton"
+        android:layout_alignLeft="@+id/flashButton"
+        android:layout_alignRight="@+id/sirenButton"
+        android:layout_alignStart="@+id/flashButton"
+        android:layout_below="@id/convenienceButton"
         android:text="위급상황 알림"
         android:textSize="35sp"
-        android:id="@+id/emergency"
+        android:id="@+id/emergencyButton"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/emergency"
+        android:layout_below="@id/emergencyButton"
         android:layout_marginTop="10dp"
         android:text = "Team 귀가본능"
         android:textSize="10sp"
