--- a/app/src/main/res/layout/content_userinfo.xml
+++ b/app/src/main/res/layout/content_userinfo.xml
@@ -15,11 +15,12 @@
         android:id="@+id/textname"
         android:text="이름"
         android:layout_above="@+id/editname"
-
         />
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:imeOptions="actionNext"
+        android:inputType="text"
         android:id="@+id/editname"
         android:layout_above="@+id/textec"
         />
@@ -33,6 +34,8 @@
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:imeOptions="actionNext"
+        android:inputType="number"
         android:layout_centerVertical="true"
         android:id="@+id/editec"
         android:hint="ex) 01012345678"
@@ -47,6 +50,8 @@
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:inputType="number"
         android:layout_below="@id/textmachine"
         android:id="@+id/editmachine"
         />
