--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,15 @@
         android:id="@+id/title"
         />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:layout_below="@id/title"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/locationtest"
+        />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
