"Send SMS" 1. Send SMS by response of server(name, emergency PhoneNumber) 서버에 UUID를 보내 요청한 name과 긴급 전화번호를 이용하여 긴급 번호로 문자를 전송한다.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,8 +19,6 @@
         android:textSize="30sp"
         android:id="@+id/title"
         />
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +26,22 @@
         android:layout_below="@id/title"
         android:layout_centerHorizontal="true"
         android:id="@+id/locationtest"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:layout_below="@id/locationtest"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/nametest"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:layout_below="@id/nametest"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/ecphonetest"
         />
     <Button
         android:layout_width="wrap_content"
