--- a/app/src/main/res/layout/path_layout.xml
+++ b/app/src/main/res/layout/path_layout.xml
@@ -5,16 +5,28 @@
     android:orientation="vertical"
     >
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:hint="출발지를 입력하세요"
             android:id="@+id/edit1"
             />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="출발지 검색"
+            android:id="@+id/button1"
+            />
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="도착지를 입력하세요"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="출발지를 입력하세요"
             android:id="@+id/edit2"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="도착지 검색"
+            android:id="@+id/button2"
             />
 
 </android.widget.LinearLayout>
