"add safeMap by webView" 생활안전지도를 웹뷰로 띄움. 안전지도 서비스 버튼을 누를 경우 TMAP과 생활안전지도가 위아래 이중으로 뜸

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,16 +7,24 @@
         android:orientation="vertical"
         tools:context="kr.inha.inti.safe_backhome.MapActivity">
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="길찾기"
         android:id="@+id/pathButton"
         />
 
-        <LinearLayout
-            android:id="@+id/linearLayoutTmap"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayoutTmap"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+    </LinearLayout>
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/safeMap" />
+
     </android.widget.LinearLayout>
