180813 1. Add realtime location 현위치 조정 버튼 생성 2. POI POI 편의점 및 관공서만 뜨게함(경찰서를 제공하지 않음) 3. 코드 정리 GPS 사용을 함수로 정리, POI가 합쳐짐으로 인해 주변 편의시설 버튼 삭제

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,12 +6,26 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="kr.inha.inti.safe_backhome.MapActivity">
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="길찾기"
-        android:id="@+id/pathButton"
-        />
+        android:orientation="horizontal"
+        >
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="길찾기"
+            android:id="@+id/pathButton"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="현위치"
+            android:id="@+id/locationButton"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayoutTmap"
@@ -19,6 +33,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
+
     </LinearLayout>
 
     <WebView
